--- a/appbd2/package.json
+++ b/appbd2/package.json
@@ -10,20 +10,20 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@expo-google-fonts/inter": "^0.2.2",
     "@expo-google-fonts/roboto": "^0.2.2",
     "@expo/webpack-config": "~0.16.2",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
     "expo": "~45.0.0",
-    "expo-app-loading": "~2.0.0",
     "expo-font": "~10.1.0",
+    "expo-location": "~14.2.2",
     "expo-splash-screen": "~0.15.1",
     "lottie-react-native": "5.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
     "react-native-animatable": "^1.3.3",
+    "react-native-maps": "^0.30.2",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
     "react-native-web": "0.17.7",
